<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SendGroup</string>
    <string name="action_settings">Settings</string>
    <string name="title_section1">Group</string>
    <string name="title_section2">Text</string>
    <string name="action_send">Send</string>
    <string name="action_create_group">Create Group</string>
    <string name="lable_enter_text">Please enter the text:</string>
    <string name="reminder">Enter message context here.</string>
    <string name="button_create">Create</string>
    <string name="button_rename">Rename</string>
    <string name="button_delete">Delete</string>
    <string name="button_add_contacts">Manage</string>
    <string name="button_add_contacts_cancel">Cancel</string>
    <string name="button_add_contacts_add">Add</string>
    <string name="title_activity_choose_contacts">Add contacts to group</string>
    <string name="hello_world">Hello world!</string>
    <string name="lable_group_text">Group:</string>

</resources>
