<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
        
    <ListView
        android:id="@+id/gropuList"
        android:layout_width="wrap_content"
        android:layout_height="360dp">
    </ListView>
    
    <Button
        android:id="@+id/btnCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/gropuList"
        android:text="@string/button_create" />

    <Button
        android:id="@+id/btnRename"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gropuList"
        android:layout_toRightOf="@+id/btnCreate"
        android:text="@string/button_rename" />
    
    <Button
        android:id="@+id/btnDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gropuList"
        android:layout_toRightOf="@+id/btnRename"
        android:text="@string/button_delete" />
    
    <Button
        android:id="@+id/btnAddContacts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gropuList"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/btnDelete"
        android:text="@string/button_add_contacts" />

</RelativeLayout>
