<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$DummySectionFragment" >
    
    <TextView
        android:id="@+id/label_group"
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:padding="5dip"
        android:text="@string/lable_group_text" />

    <Spinner
        android:id="@+id/spinner_group"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:layout_toRightOf="@+id/label_group" />

    <TextView
        android:id="@+id/label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="5dip"
        android:layout_below="@+id/spinner_group"
        android:text="@string/lable_enter_text" />

    <EditText
        android:id="@+id/section_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/label"
        android:hint="@string/reminder" />

</RelativeLayout>